Fix for #28. z-index properly managed and elements fixed

--- a/css/core.css
+++ b/css/core.css
@@ -41,8 +41,8 @@ div.popupHolder {
 	background-color: #fff;
 	border-radius: 10px;
 	box-shadow: 0px 0px 50px #000;
-	z-index: 2;
-    position: absolute;
+	z-index: 10;
+    position: fixed;
 }
 
 div#popupContent {
@@ -107,10 +107,10 @@ div.testHalt {
 	/* Specify any colouring during the test halt for pre/post questions */
 	background-color: rgba(0,0,0,0.5);
 	/* Don't mess with this bit */
-	z-index: 2;
+	z-index: 9;
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	left: 0px;
 	top: 0px;
 }
